installed material-ui/core, linked font, scaffolded SideNav Drawer

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@ body {
 }
 
 .App {
-  text-align: center;
+  /* text-align: center;
   width: 85%;
   margin: 0 auto;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 10px; */
 }
